applications/homepage/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homepage
  namespace: sigaint-applications
  labels:
    app: homepage
spec:
  tls:
    - hosts:
        - __PATCH__
      secretName: homepage-tls
  rules:
    - host: __PATCH__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  name: main
